--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.20)  # Minimum required CMake version
+cmake_minimum_required(VERSION 3.20)
 project(MyProject VERSION 1.0 LANGUAGES CXX)
 
 # Set C++ standard
